docs : 대용량 트래픽 설계문서 작성

--- a/docs/report/대용량_트래픽_설계문서.md
+++ b/docs/report/대용량_트래픽_설계문서.md
@@ -10,144 +10,86 @@
 기존 Redis 기반 프로세스의 한계:
 
 - 단일 병목: Redis가 단일 노드이거나 마스터/슬레이브 구조일 경우, 락 획득·해제 및 메모리 읽기/쓰기 병목 발생.
-
 - 메모리 한계: 모든 상태(재고, 발급 유저, 요청 큐)를 Redis 메모리에 유지 → 대량 동접 시 메모리 초과 위험.
-
 - 락 충돌 빈도: Redisson의 분산 락은 결국 SETNX 기반으로, 다수의 동시 경쟁에서 충돌 및 대기 증가.
-
 - 순차성·중복 처리의 한계: 클라이언트 측에서 여러 번 요청이 들어오면 락으로만 제어해야 하며, 실시간 중복 제거나 순서 보장은 힘듦.
-
 - 복구 난이도: 장애 시 Redis 상태 복구는 어렵고, 롤백 및 보정이 필요함.
 
 ## 3. 문제 해결 전략
 Kafka 기반으로 개선할 전략:
 
 1. 비동기화(Asynchronous):
-   - 클라이언트 요청을 Kafka 토픽에 먼저 적재.
+   - 클라이언트 요청을 Kafka 토픽에 먼저 적재하기 때문에 클라이언트에 빠른 응답 제공.
    - 백엔드에서 Kafka Consumer가 비동기로 처리.
-   - 클라이언트는 요청 완료 응답만 받고 상세 처리 결과는 별도 알림 or 폴링.
-
+   - 클라이언트는 요청 완료 응답만 받고 상세 처리 결과는 별도 알림 or 폴링으로 확인.
 2. 병렬성(Parallelism):
-
-   - Kafka 파티션을 이용해 이벤트를 병렬로 처리. 
-   - 예: 쿠폰 ID별 파티셔닝 → 쿠폰별 소비자 그룹 멀티 스레드 처리.
-
+   - Kafka 파티션을 이용해 이벤트를 병렬로 처리 가능. 
+   - 쿠폰 ID, 주문 ID 기준 파티셔닝으로 특정 키별 메시지 순서 보장과 함께 병렬 처리 극대화.
 3. 순차성(Sequentiality):
-
    - 특정 쿠폰 ID에 대한 이벤트는 같은 파티션으로 라우팅 → 순서 보장.
    - Kafka는 파티션 내 메시지 순서를 보장하므로 선착순 처리에 적합.
-
-4. 중복 처리(Deduplication):
-   - Kafka 메시지 키를 couponId:userId로 설정 → 동일 유저 요청 중복 방지.
+4. 중복 처리(Deduplication): 
    - Consumer 측에서 idempotent(멱등) 로직 적용.
-
+     - Kafka 메시지의 unique Key를 레디스에 저장해 중복이벤트인지 확인하는 AOP로직 추가
 5. 장애 복구 및 확장성:
    - Kafka는 메시지를 디스크에 내구성 있게 저장.
    - 장애 시 재처리 가능, Redis보다 안정적.
    - Consumer 수평 확장이 용이.
+
 ## 4. 비지니스 시퀀스 다이어그램
-```
-사용자 → API Gateway → Coupon/Order Service → Kafka → Coupon/Order Processor (Consumer) → DB & Cache
-
-```
+### 1) 선착순 쿠폰 발급
 ```mermaid
 sequenceDiagram
-    participant User
-    participant CouponController
-    participant KafkaProducer (CouponTopic)
-    participant KafkaBroker
-    participant KafkaConsumer (CouponService)
-    participant CouponDatabase
 
-    User ->> CouponController: 요청 /issue-coupon
-    CouponController ->> KafkaProducer: send(CouponIssueCommand)
-    KafkaProducer ->> KafkaBroker: publish to coupon-issue-topic
-    KafkaConsumer ->> KafkaBroker: subscribe coupon-issue-topic
-    KafkaConsumer ->> CouponDatabase: 처리 (재고 차감, 발급 기록)
-    KafkaConsumer -->> KafkaProducer: 발급 성공/실패 이벤트 publish
-sequenceDiagram
-    participant User
-    participant OrderController
-    participant KafkaProducer (OrderTopic)
-    participant KafkaBroker
-    participant KafkaConsumer (OrderService)
-    participant OrderDatabase
-    participant KafkaProducer (PaymentTopic)
-    participant KafkaConsumer (PaymentService)
+    %% 쿠폰 발급 흐름
+    User->>CouponService: 쿠폰 발급 요청
+    CouponService->>CouponIssueService(Redis): 쿠폰 재고 및 선착순 처리 Redis 유저 저장
+    CouponIssueService(Redis)-->>KafkaEventPublisher: 레디스에 정상 저장이 된다면 Kafka 이벤트 발행 (coupon.issue topic)
+    KafkaEventPublisher->>KafkaBroker: 발급 이벤트 publish (coupon.issued topic)
 
-    User ->> OrderController: 요청 /place-order
-    OrderController ->> KafkaProducer: send(OrderPlaceCommand)
-    KafkaProducer ->> KafkaBroker: publish to order-topic
-    KafkaConsumer (OrderService) ->> KafkaBroker: subscribe order-topic
-    KafkaConsumer (OrderService) ->> OrderDatabase: 주문 생성, 재고 차감, 쿠폰 사용
-    KafkaConsumer (OrderService) ->> KafkaProducer (PaymentTopic): send(PaymentRequestEvent)
-    KafkaProducer (PaymentTopic) ->> KafkaBroker: publish to payment-topic
-    KafkaConsumer (PaymentService) ->> KafkaBroker: subscribe payment-topic
-    KafkaConsumer (PaymentService) ->> PaymentGateway: 결제 처리
-    KafkaConsumer (PaymentService) ->> OrderDatabase: 결제 상태 업데이트
-
+    %% Consumer Group 처리
+    CouponConsumerGroup->>KafkaBroker: poll 메시지 (coupon.issued topic)
+    KafkaBroker-->>CouponConsumer: partition 할당, 메시지 전달
+    CouponConsumer->>CouponDB: 쿠폰 발급 DB 기록
+    CouponConsumer->>KafkaBroker: offset 커밋
 ```
-설명:
-✅ KafkaProducer는 Controller 계층에서 명령 메시지를 전송.
-✅ KafkaConsumer는 백그라운드에서 메시지를 구독하고 처리.
-✅ 주문-결제 연계는 이벤트 체인으로 연결됨 (주문 성공 → 결제 요청 이벤트 → 결제 성공 → 주문 완료 상태).
+1. 사용자가 API 서버에 쿠폰 발급을 요청
+2. CouponIssueService에서 Redis를 사용하여 쿠폰 재고 수량 감소 및 유저 발급 여부 확인 후 Redis에 결과 저장
+3. Redis에서 성공적으로 처리 되었을 때만 Kafka Event 발행 (coupon.issued)
+4. Kafka Consumer는 userId,couponId를 받아 UserCoupon를 save하고 해당 쿠폰의 재고 감소 (DB insert/update)
 
-### 주문 취소
+### 2) 상품 주문 
 ```mermaid
 sequenceDiagram
-    participant User
-    participant OrderController
-    participant OrderFacade
-    participant OrderService
-    participant UserService
-    participant ApplicationEventPublisher
+    %% 주문 처리 흐름
+    User->>OrderFacade: 주문 요청
+    OrderFacade->>ApplicationEventPublisher: 주문생성 로직 수행 후 도메인 이벤트 발행 
+    ApplicationEventPublisher-->>PointService: 유저 포인트 차감
+    ApplicationEventPublisher->>KafkaEventPublisher: 주문 이벤트 생성 (order.placed topic)
+    KafkaEventPublisher->>KafkaBroker: 주문 이벤트 publish (order.placed topic)
 
-    %% 주문 취소 흐름
-    User ->> OrderController: 요청 /cancel-order
-    OrderController ->> OrderFacade: cancel(criteria)
-    OrderFacade ->> OrderService: findByIdAndUserId(orderId, userId)
-    OrderFacade ->> UserService: get(userId)
-    OrderFacade ->> OrderService: cancel(order)
-    OrderFacade ->> ApplicationEventPublisher: publish(CancelOrderEvent)
-    OrderFacade -->> OrderController: 취소 완료 응답
-
-    alt 취소 실패 (예외 발생)
-        OrderFacade -->> OrderController: FAIL_ORDER_CANCEL 예외 발생
-    end
-
+    %% Consumer Group 처리
+    OrderConsumerGroup->>KafkaBroker: poll 메시지 (order.placed topic)
+    KafkaBroker-->>OrderConsumer: partition 할당, 메시지 전달
+    OrderConsumer->> PaymentService: 외부 결제 모듈 호출 및 결제 상태 업데이트 
+    OrderConsumer->>KafkaBroker: offset 커밋
 ```
-### 쿠폰 초기화 플로우
-```mermaid
-sequenceDiagram
-    participant Admin
-    participant CouponAdminController
-    participant CouponIssueRepository
-    participant Redis
+1. 사용자가 API 서버에 상품 주문 요청
+2. OrderFacade에서 사용 쿠폰과 Product를 조회해 Order 객체 create
+3. OrderFacade에서 Order 객체를 성공적으로 만들었다면 ApplicationEventPublisher 발행.
+4. ApplicationEventPublisher에서 PointService로 해당 유저 잔액을 차감 후 Kafka Event 발행 (order.placed)
+5. Kafka Consumer는 orderId,userId 등의 정보를 받아 PaymentClient(외부 데이터 플랫폼)로 결제 요청 및 결제 상태 업데이트
 
-    %% 쿠폰 초기화 흐름
-    Admin ->> CouponAdminController: 요청 /init-coupon
-    CouponAdminController ->> CouponIssueRepository: initCouponStock(couponId, initialQuantity)
-    CouponIssueRepository ->> Redis: set coupon stock
-    CouponIssueRepository -->> CouponAdminController: 초기화 완료 응답
-
-```
-
-정리
-✅ 주문 취소:
-사용자 요청 → 주문 조회 → 주문 상태 변경 → 이벤트 발행 → 완료/실패 응답.
-
-✅ 쿠폰 초기화:
-관리자 요청 → Redis 재고 초기화 → 완료 응답.
 ## 5. 카프카 구성 및 프로세스 진행 과정 
-| 구성 요소                | 역할                                             |
-| -------------------- | ---------------------------------------------- |
-| Kafka Topic          | `coupon-issue`, `order-create`, `order-cancel` |
-| Kafka Producer       | 서비스 레이어에서 사용자 요청을 Kafka에 발행                    |
-| Kafka Consumer Group | 쿠폰, 주문 처리용 컨슈머 그룹 (각 토픽별 멀티 컨슈머)               |
-| Partition Key        | `couponId` or `orderId` → 순서 보장 및 병렬 처리        |
-| Processor            | 실제 재고 차감, 주문 처리, 상태 기록 로직 실행                   |
-| DB                   | 최종 상태 영속화                                      |
-| Cache (Redis)        | 읽기 최적화용 캐시 업데이트                                |
+| 구성 요소                | 역할                                                                         |
+| -------------------- |----------------------------------------------------------------------------|
+| Kafka Topic          | `coupon.issued`, `order.placed`, `order.canceled`                          |
+| Kafka Producer       | 서비스 레이어에서 사용자 요청을 Kafka에 발행                                                |
+| Kafka Consumer Group | 쿠폰, 주문 처리용 컨슈머 그룹 (각 토픽별 멀티 컨슈머)                                           |
+| Partition Key        | `requestId(client에서 보내주는 UUID)` or `couponId` or `orderId` → 순서 보장 및 병렬 처리 |
+| Processor            | 실제 재고 차감, 주문 처리, 상태 기록 로직 실행                                               |
+| DB                   | 최종 상태 영속화                                                                  |
+| Cache (Redis)        | 읽기 최적화용 캐시 업데이트                                                            |
 
 ✅ 프로세스 상세:
 - Kafka Producer는 요청 발생 시 메시지 발행.
